# today-i-did

./: .gitignore  Cargo.toml  README.md  package.json  shell.nix  spago.dhall
src/: Main.purs  configuration.rs  daily_report.rs  main.rs
src/GitHub/: Client.js  Client.purs  PullRequest.js  PullRequest.purs
src/Linear/: Client.js  Client.purs  Issue.js  Issue.purs
src/TodayIDid/: DailyReport.purs
