[package]
name = "today_i_did"
version = "0.1.0"
authors = ["Marshall Bowers <elliott.codes@gmail.com>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "today-i-did"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0.18", features = ["derive"] }
dialoguer = "0.10"
dotenv = "0.15.0"
home = "0.5.4"
lazy_static = "1.4.0"
linear_sdk = "0.0.1"
log = "0.4"
octocrab = "0.17.0"
pretty_env_logger = "0.4"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
toml = "0.5"
